--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CardsViews</string>
+
+    <string name="menu1">uno</string>
+    <string name="menu2">dos</string>
 </resources>
